--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/_BuoiHocPartial.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/BuoiHoc/_BuoiHocPartial.cshtml
@@ -1,10 +1,6 @@
-﻿@model List<QuanLyThongTinDaoTao.Models.BuoiHoc>
+﻿
+@model List<QuanLyThongTinDaoTao.Models.BuoiHoc>
 @using QuanLyThongTinDaoTao.Models;
-
-@{
-    ViewBag.Title = "Danh Sách Buổi Học";
-    Layout = "~/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml";
-}
 
 @if (Model != null && Model.Any())
 {
@@ -69,4 +65,3 @@ else
         margin: 5px 0;
     }
 </style>
-
