--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -74,7 +74,7 @@
                             <i class="fa fa-th me-2"></i>Lớp Học
                         </a>
                         <a href="@Url.Action("Index", "BuoiHoc")" class="nav-item nav-link">
-                            <i class="fa fa-keyboard me-2"></i>Buổi Học
+                            <i class="fas fa-calendar-alt me-2"></i>Buổi Học
                         </a>
                         <a href="@Url.Action("Index", "HocVien")" class="nav-item nav-link">
                             <i class="fa fa-keyboard me-2"></i>Học Viên
