--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -11,7 +11,7 @@
     <link href="~/Areas/Admin/Asset/css/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdn.ckeditor.com/ckeditor5/36.0.1/classic/ckeditor.js"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>
 
 </head>
 <body class="sb-nav-fixed">
@@ -88,9 +88,12 @@
                         <a href="@Url.Action("Index", "DiemDanhHocVien")" class="nav-item nav-link">
                             <i class="fa fa-keyboard me-2"></i>Điểm Danh Học Viên
                         </a>
+                        <a href="@Url.Action("Index", "PhanQuyen")" class="nav-item nav-link">
+                            <i class="fa fa-keyboard me-2"></i>Phân Quyền Người Dùng
+                        </a>
                         <div class="sb-sidenav-footer">
                             @*<div class="small">Logged in as:</div>
-                                Start Bootstrap*@
+            Start Bootstrap*@
                         </div>
                     </div>
                 </div>
